--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -5,10 +5,11 @@ build_binary:
      
 testing:
    script: testing/sample-test-script.py
+   pre_flight: ls
    #env_vars:
    #     - $SPN_PARTICLE_TOKEN
-   device_update:
-       devices:
-           - $DEVID_1
-       ota_method: particle
-       binary: auto
+   #device_update:
+   #    devices:
+   #        - $DEVID_1
+   #    ota_method: particle
+   #    binary: auto
