--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -5,10 +5,13 @@ build_binary:
      
 testing:
    script: testing/sample-test-script.py
-   env_vars:
-        - $SPN_PARTICLE_TOKEN
-   device_update:
-       devices:
-           - $DEVID_1
+   pre_flight: echo "............"
+   pre_flight: ls
+   post_flight: echo "......&&&&&&......"
+   #env_vars:
+   #     - $SPN_PARTICLE_TOKEN
+   #device_update:
+   #    devices:
+   #        - $DEVID_1
    #    ota_method: particle
    #    binary: auto
