--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -7,7 +7,7 @@ testing:
    pre_flight: echo "....."
    script: testing/sample-test-script.py
    post_flight: ls
-   post_flight: echo "++++++"
+                echo "++++++"
    #env_vars:
    #     - $SPN_PARTICLE_TOKEN
    #device_update:
