--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -2,12 +2,13 @@ build_binary:
      builder: 'particle photon'
      binary_name: 'firmware/target/firmware.bin'
      script: cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/firmware
-     
+     on_success: echo "sssssssssssssssssssssssssssssssssssssssss"
 testing:
    pre_flight: echo "....."
    script: testing/sample-test-script.py
-   post_flight: ls
    post_flight: echo "++++++"
+   
+   
    #env_vars:
    #     - $SPN_PARTICLE_TOKEN
    #device_update:
