--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -3,11 +3,12 @@ build_binary:
      binary_name: 'firmware/target/firmware.bin'
      script: cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/firmware
      
+     
 testing:
-   pre_flight: echo "....."
+   pre_flight: 'echo "....." && echo pppppppp'
    script: testing/sample-test-script.py
-   post_flight: ls
    post_flight: echo "++++++"
+   
    #env_vars:
    #     - $SPN_PARTICLE_TOKEN
    #device_update:
