--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -3,8 +3,9 @@ build_binary:
      binary_name: 'firmware/target/firmware.bin'
      script: cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/firmware
      
+     
 testing:
-   pre_flight: echo "....."
+   pre_flight: 'echo "....." && ls'
    post_flight: echo "++++++"
    script: testing/sample-test-script.py
    
