--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -2,13 +2,12 @@ build_binary:
      builder: 'particle photon'
      binary_name: 'firmware/target/firmware.bin'
      script: cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/firmware
-     post_flight: echo "++++++"
      
 testing:
-   pre_flight: echo "....."
-   post_flight: echo "++++++"
-   script: testing/sample-test-script.py
+   pre_flight: echo "....." $$ pwd
    
+   script: testing/sample-test-script.py
+   post_flight: echo "++++++"
    #env_vars:
    #     - $SPN_PARTICLE_TOKEN
    #device_update:
