--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -2,17 +2,16 @@ build_binary:
      builder: 'particle photon'
      binary_name: 'firmware/target/firmware.bin'
      script: cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/firmware
-     post_flight: echo "++++++"
      
 testing:
-   pre_flight: echo "....."
-   post_flight: echo "++++++"
-   script: testing/sample-test-script.py
+   pre_flight: echo "....." $$ pwd
    
-   #env_vars:
-   #     - $SPN_PARTICLE_TOKEN
-   #device_update:
-   #    devices:
-   #        - $DEVID_1
-   #    ota_method: particle
-   #    binary: auto
+   script: testing/1.basic-tests/GPIO/read-analog-input.py
+
+   env_vars:
+        - $SPN_PARTICLE_TOKEN
+   device_update:
+       devices:
+           - $DEVID_1
+       ota_method: particle
+       binary: auto
