--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -4,10 +4,9 @@
 #     script: cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/firmware
 #     post_flight: echo "++++++"
 #    pre_flight: echo "++++++"
-     
+   
 testing:
-   pre_flight: "echo ".....""
-   post_flight: echo "++++++"
+   pre_flight: "echo ....."
    script: testing/sample-test-script.py
    #env_vars:
    #     - $SPN_PARTICLE_TOKEN
