--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -9,7 +9,7 @@
 #   repos: /kappa/kippo
 testing:
 #   pre_flight: "echo ....."
-   script: testing/scenario.py
+   script: testing/test-script.py
 #    env_vars: 
 #       - $myd
    device_update:
