--- a/devices-production.yml
+++ b/devices-production.yml
@@ -4,9 +4,9 @@ device1:
   serial: "30353634-3033470B-0032001F"
   location: "fact1"
   certs: "keyboard cat"
-device2:
-  name: "Wiced Board 2"
-  type: "armCortexM"
-  serial: "30353634-3033470B-002B0032"
-  location: "fact1"
-  certs: "keyboard cat2"
+# device2:
+#   name: "Wiced Board 2"
+#   type: "armCortexM"
+#   serial: "30353634-3033470B-002B0032"
+#   location: "fact1"
+#   certs: "keyboard cat2"
