--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -8,14 +8,15 @@
 #   env: shipper.yml
 #   repos: /kappa/kippo
 testing:
-#   pre_flight: "echo ....."
-   script: testing/test-script.py
+   pre_flight: "echo ....."
+   script: testing/sample-test-script.py
+
 #    env_vars: 
 #       - $myd
-   device_update:
-     ota_method: 'spanner shipper'
-     env: 'production'
-     repo: 'current'
+#    device_update:
+#      ota_method: 'spanner shipper'
+#      env: 'production'
+#      repo: 'current'
    #    devices:
    #        - $DEVID_1
    #    ota_method: particle
