--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -8,6 +8,9 @@
 #   env: shipper.yml
 #   repos: /kappa/kippo
 testing:
+     script: testing/sample-test-script.py
+        env_vars:
+            - $SPN_PARTICLE_TOKEN
     device_update:
         devices:
             - $my
