--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -8,15 +8,11 @@
 #   env: shipper.yml
 #   repos: /kappa/kippo
 testing:
-    script: testing/sample-test-script.py
-    env_vars:
+   script: testing/2.simple-tests/send-network-cmd-to-toggle-pin.py
+   env_vars: 
        - $SPN_PARTICLE_TOKEN
-    device_update:
-        devices:
-            - $my
-        ota_method: particle
-        binary: auto
-#    env_vars: 
+#        ota_method: particle
+#        binary: auto#    env_vars: 
 #       - $myd
 #    device_update:
 #      ota_method: 'spanner shipper'
