--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -8,10 +8,11 @@
 #   env: shipper.yml
 #   repos: /kappa/kippo
 testing:
-   script: testing/1.basic-tests/GPIO/read-digital-output.py
+   script: testing/sample-test-script.py
 
-   env_vars: 
-       - $SPN_PARTICLE_TOKEN
+
+#    env_vars: 
+#        - $SPN_PARTICLE_TOKEN
 #        ota_method: particle
 #        binary: auto#    env_vars: 
 #       - $myd
