--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -1,14 +1,14 @@
-# build_binary:
-#      builder: 'particle photon'
-#      binary_name: 'firmware/target/firmware.bin'
-#      script: testing/sample-test-script.py
-#      pre_flight: echo "++++++"
+build_binary:
+     builder: 'particle photon'
+     binary_name: 'firmware/target/firmware.bin'
+     script: testing/sample-test-script.py
+     pre_flight: echo "++++++"
 # device_update_intergration:
 #   ota_method: spanner shipper
 #   env: shipper.yml
 #   repos: /kappa/kippo
-testing:
-   script: testing/sample-test-script.py
+# testing:
+#    script: testing/sample-test-script.py
 
 
 #    env_vars: 
