--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -2,7 +2,9 @@ build_binary:
     pre_flight: 
        - echo "hello there"
        - cd ../ && echo $PWD
-    script: echo 'hello there' 
+    script: echo 'hello there' && cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/app
+    builder: 'particle photon'
+    binary_name: 'app/target/app.bin' 
     post_flight: 
        - echo "finito la musica"
 # device_update_intergration:
