--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -1,12 +1,12 @@
-# build_binary:
-#     pre_flight: 
-#        - echo "hello there"
-#        - cd ../ && echo $PWD
-#     script: echo 'hello there' && cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/app
-#     builder: 'particle photon'
-#     binary_name: 'app/target/app.bin' 
-#     post_flight: 
-#        - echo "finito la musica"
+build_binary:
+    pre_flight: 
+       - echo "hello there"
+       - cd ../ && echo $PWD
+    script: echo 'hello there' && cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/app
+    builder: 'particle photon'
+    binary_name: 'app/target/app.bin' 
+    post_flight: 
+       - echo "finito la musica"
 # device_update_intergration:
 #   ota_method: spanner shipper
 #   env: shipper.yml
