--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -3,7 +3,7 @@ build_binary:
        - echo "hello there"
        - cd ../ && echo $PWD
     script: echo 'hello there' && cd $SPN_BUILDER_SDK && make PLATFORM=photon APPDIR=$SPN_PROJECT_DIR/app
-    builder: 'particle photon'
+    builder: 'particle'
     binary_name: 'app/target/app.bin' 
     post_flight: 
        - echo "finito la musica"
