--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -1,21 +1,27 @@
-build_binary:
-    pre_flight: 
-        - echo "hello there"
-        - cd ../ && echo $PWD
-        - sleep 40
-    script: echo 'hello there'
-    builder: 'particle'
-    artifacts:
-        -  'testing/'
-    post_flight: 
-        - echo "finito la musica"
+# build_binary:
+#     pre_flight: 
+#         - echo "hello there"
+#         - cd ../ && echo $PWD
+#         - sleep 40
+#     script: echo 'hello there'
+#     builder: 'particle'
+#     artifacts:
+#         -  'testing/'
+#     post_flight: 
+#         - echo "finito la musica"
 
 # device_update_intergration:
 #   ota_method: spanner shipper
 #   env: shipper.yml
 #   repos: /kappa/kippo
-# testing:
-#    script: echo 'hello there'
+testing:
+    pre_flight: 
+        - echo "hello there"
+        - cd ../ && echo $PWD
+        - sleep 40
+    script: echo 'hello there'
+    post_flight: 
+        - echo "finito la musica"
 # build_binary:
 #     pre_flight:
 #        - echo "hello there"
