--- a/.spannerci.yml
+++ b/.spannerci.yml
@@ -1,7 +1,7 @@
 build_binary:
     pre_flight: 
         - echo "hello there"
-        - cd ../ && echo $PWD
+        - cdd ../ && echo $PWD
         - sleep 40
     script: echo 'hello there'
     builder: 'particle'
